# ChangeLog for x11-libs/libpciaccess
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libpciaccess/ChangeLog,v 1.112 2015/03/14 14:11:54 maekke Exp $

  14 Mar 2015; Markus Meier <maekke@gentoo.org> libpciaccess-0.13.3.ebuild:
  arm stable, bug #530652

  06 Mar 2015; Jeroen Roovers <jer@gentoo.org> libpciaccess-0.13.3.ebuild:
  Stable for HPPA (bug #530652).

  03 Mar 2015; Yixun Lan <dlan@gentoo.org> libpciaccess-0.13.2.ebuild:
  add arm64 support, tested on A53 board

  24 Feb 2015; Agostino Sarubbo <ago@gentoo.org> libpciaccess-0.13.3.ebuild:
  Stable for alpha, wrt bug #530652

  23 Feb 2015; Agostino Sarubbo <ago@gentoo.org> libpciaccess-0.13.3.ebuild:
  Stable for sparc, wrt bug #530652

  22 Feb 2015; Agostino Sarubbo <ago@gentoo.org> libpciaccess-0.13.3.ebuild:
  Stable for ia64, wrt bug #530652

  21 Feb 2015; Agostino Sarubbo <ago@gentoo.org> libpciaccess-0.13.3.ebuild:
  Stable for ppc64, wrt bug #530652

  20 Feb 2015; Agostino Sarubbo <ago@gentoo.org> libpciaccess-0.13.3.ebuild:
  Stable for ppc, wrt bug #530652

  19 Feb 2015; Agostino Sarubbo <ago@gentoo.org> libpciaccess-0.13.3.ebuild:
  Stable for x86, wrt bug #530652

  18 Feb 2015; Agostino Sarubbo <ago@gentoo.org> libpciaccess-0.13.3.ebuild:
  Stable for amd64, wrt bug #530652

  08 Feb 2015; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  libpciaccess-0.13.3.ebuild:
  Restore accidentally dropped s390 keyword.

*libpciaccess-0.13.3 (07 Feb 2015)

  07 Feb 2015; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +libpciaccess-0.13.3.ebuild,
  -files/libpciaccess-0.13-fix-out-bwl-macros.patch,
  -libpciaccess-0.12.1.ebuild, -libpciaccess-0.13.1-r1.ebuild,
  -libpciaccess-0.13.1.ebuild, -libpciaccess-0.13.ebuild:
  Version bump. Remove old.

  18 Jun 2014; Michał Górny <mgorny@gentoo.org> libpciaccess-0.13.2.ebuild:
  Update dependencies to require guaranteed EAPI=5 or multilib ebuilds, bug
  #513718.
